--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://www.example.com"
+baseURL = "https://euphonious-taiyaki-0514cc.netlify.app/"
 title = "johndoe"
 theme = "hugo-coder"
 languageCode = "en"
